[ticket/12168] Nav Header Links Alignment Issues w/o small-icon
There are more than 1 ways to get this 1 px added, i just chose
an easy one (still early over here...)

PHPBB3-12168

--- a/phpBB/styles/prosilver/theme/buttons.css
+++ b/phpBB/styles/prosilver/theme/buttons.css
@@ -131,6 +131,10 @@ a.sendemail {
 	padding: 1px 0 0 17px;
 }
 
+.no-small-icon {
+	padding: 1px 0 0 0;
+}
+
 ul.linklist li.small-icon {
 	padding-left: 0;
 }
